Updated Manager to work with Kafka

--- a/code/nodejs/manager/manager-interface/src/app/footer/footer.component.html
+++ b/code/nodejs/manager/manager-interface/src/app/footer/footer.component.html
@@ -1,9 +1,5 @@
-<div class="container footer" 
-    fxLayout="row wrap" 
-    fxLayout.lt-md="column" 
-    fxLayoutAlign="center center" 
-    fxLayoutGap="10px">
+<div class="container footer background-primary text-floral-white">
   <div>
-      <p>© Copyright 2018 Ristorante Con Fusion</p>
+      <p>© Copyright 2018 Phil & Boy Productions</p>
   </div>
 </div>
