--- a/code/nodejs/manager/manager-interface/src/app/footer/footer.component.scss
+++ b/code/nodejs/manager/manager-interface/src/app/footer/footer.component.scss
@@ -9,6 +9,9 @@ $background-pale: #D1C4E9;
 }
 
 .footer{
-    background-color: $background-pale;
     @include zero-margin(20px, 0px);
+    justify-content: center;
+	position:fixed;
+	bottom:0px;
+	width:100%;
 }
