--- a/code/nodejs/manager/manager-interface/src/app/header/header.component.html
+++ b/code/nodejs/manager/manager-interface/src/app/header/header.component.html
@@ -1,6 +1,12 @@
-<mat-toolbar color="primary">
-  <span>Manager Interface</span>
-  <a mat-button routerLink='/home' routerLinkActive="active"><span class="fa fa-home fa-lg"></span> Home</a>
-  <a mat-button routerLink='/users'><span class="fa fa-plug fa-lg"></span> Online Users</a>
-  <a mat-button routerLink='/requests'><span class="fa fa-wrench fa-lg"></span> Pending Requests</a>
+<mat-toolbar color="primary" class="mat-elevation-z6 background-primary">
+	<mat-toolbar-row>
+		<span>Manager Interface</span>
+		<span class="header-button"><a mat-button routerLink='/home' routerLinkActive="active"><span class="fa fa-home fa-lg"></span> Home</a></span>
+		<span class="header-button"><a mat-button routerLink='/users' routerLinkActive="active"><span class="fa fa-plug fa-lg"></span> Online Users</a></span>
+		<span class="header-button"><a mat-button routerLink='/requests' routerLinkActive="active"><span class="fa fa-wrench fa-lg"></span> Pending Requests</a></span>
+		<span class="header-spacer"></span>
+		<mat-slide-toggle (click)="changeManagementMode()" [checked]="managementMode">
+			Management Mode
+		</mat-slide-toggle>
+	</mat-toolbar-row>
 </mat-toolbar>
