--- a/code/nodejs/manager/manager-interface/src/app/header/header.component.scss
+++ b/code/nodejs/manager/manager-interface/src/app/header/header.component.scss
@@ -1,14 +1,31 @@
+
 $lt-gray: #ddd;
-$background-moredark: #4527A0;
+$background-moredark: #1A237E;
 $background-dark: #512DA8;
 $background-light: #9575CD;
 $background-pale: #D1C4E9;
 
-@mixin zero-margin($pad-up-down, $pad-left-right) {
-    margin: 0px auto;
-    padding: $pad-up-down $pad-left-right;
-}
+$lt-gray: #ddd;
+$background-dark: #283593;
+$background-light: #7986CB;
+$background-pale: #9FA8DA;
+$primary-color-dark:   #1A237E;
+$primary-color:        #3f51b5;
+$primary-color-light:  #7986CB;
+$primary-color-text:   #E8EAF6;
+$accent-color:         #FFC107;
+$primary-text-color:   #212121;
+$secondary-text-color: #757575;
+$divider-color:        #BDBDBD;
 
 .active {
     background: $background-moredark;
+}
+
+.header-button {
+  padding: 0 10px;
+}
+
+.header-spacer {
+  flex: 1 1 auto;
 }
