--- a/code/nodejs/manager/manager-interface/src/styles.scss
+++ b/code/nodejs/manager/manager-interface/src/styles.scss
@@ -5,13 +5,13 @@
 @import '../node_modules/font-awesome/scss/font-awesome';
 
 $lt-gray: #ddd;
-$background-dark: #512DA8;
-$background-light: #9575CD;
-$background-pale: #D1C4E9;
-$primary-color-dark:   #512DA8;
-$primary-color:        #673AB7;
-$primary-color-light:  #D1C4E9;
-$primary-color-text:   #FFFFFF;
+$background-dark: #283593;
+$background-light: #7986CB;
+$background-pale: #9FA8DA;
+$primary-color-dark:   #1A237E;
+$primary-color:        #3f51b5;
+$primary-color-light:  #7986CB;
+$primary-color-text:   #E8EAF6;
 $accent-color:         #FFC107;
 $primary-text-color:   #212121;
 $secondary-text-color: #757575;
@@ -25,10 +25,15 @@ body {
   padding: 0; 
   margin: 0; 
   font-family: Roboto, sans-serif; 
+  height: 100%;
+
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
 }
 
 .container {
-	margin: 20px;
+	margin: 40px;
 	display: flex;
 }
 
