--- a/code/java/worker/src/main/resources/login.fxml
+++ b/code/java/worker/src/main/resources/login.fxml
@@ -9,83 +9,74 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="upm.lssp.ui.LoginController">
+<AnchorPane prefHeight="450.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="upm.lssp.ui.LoginController">
    <children>
-      <VBox prefHeight="400.0" prefWidth="600.0">
+      <VBox>
          <children>
-            <HBox alignment="CENTER" prefHeight="129.0" prefWidth="600.0">
+            <VBox prefHeight="124.0" prefWidth="400.0">
                <children>
-                  <ImageView fitHeight="104.0" fitWidth="330.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@assets/logo.png" />
-                     </image>
-                     <HBox.margin>
-                        <Insets top="10.0" />
-                     </HBox.margin>
-                  </ImageView>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="599.0">
-               <children>
-                  <FlowPane prefHeight="100.0" prefWidth="353.0">
+                  <HBox alignment="CENTER" prefHeight="123.0" prefWidth="477.0">
                      <children>
-                        <HBox prefHeight="39.0" prefWidth="320.0">
-                           <children>
-                              <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
-                                 <children>
-                                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome to the best chat ever, even better than Telegram" wrappingWidth="319.88323974609375" />
-                                    <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@assets/zk.png" />
-                                       </image>
-                                       <VBox.margin>
-                                          <Insets bottom="20.0" />
-                                       </VBox.margin>
-                                    </ImageView>
-                                    <ImageView fitHeight="76.0" fitWidth="157.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@assets/kafka.png" />
-                                       </image>
-                                    </ImageView>
-                                 </children>
-                              </VBox>
-                           </children>
-                        </HBox>
+                        <ImageView fitHeight="104.0" fitWidth="330.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@assets/logo.png" />
+                           </image>
+                           <HBox.margin>
+                              <Insets top="10.0" />
+                           </HBox.margin>
+                        </ImageView>
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
+            <VBox alignment="TOP_CENTER" prefHeight="122.0" prefWidth="400.0">
+               <children>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome to the best chat ever, even better than Telegram" wrappingWidth="365.88323974609375" />
+                  <VBox alignment="CENTER" prefHeight="70.0" prefWidth="400.0">
+                     <children>
+                        <TextField fx:id="username" maxWidth="-Infinity" prefWidth="190.0" text="Username">
+                           <opaqueInsets>
+                              <Insets />
+                           </opaqueInsets>
+                        </TextField>
                      </children>
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
-                     <padding>
-                        <Insets left="15.0" />
-                     </padding>
-                  </FlowPane>
-                  <FlowPane alignment="CENTER" prefHeight="200.0" prefWidth="200.0">
+                  </VBox>
+                  <VBox alignment="TOP_CENTER" prefHeight="30.0" prefWidth="237.0">
                      <children>
-                        <VBox alignment="CENTER" prefHeight="56.0" prefWidth="238.0">
-                           <children>
-                              <TextField prefHeight="27.0" prefWidth="215.0" text="Username">
-                                 <opaqueInsets>
-                                    <Insets />
-                                 </opaqueInsets>
-                              </TextField>
-                           </children>
+                        <Button fx:id="login" mnemonicParsing="false" onAction="#login" text="¡Vamos!">
                            <opaqueInsets>
-                              <Insets />
+                              <Insets bottom="20.0" />
                            </opaqueInsets>
-                        </VBox>
-                        <VBox alignment="TOP_CENTER" prefHeight="30.0" prefWidth="237.0">
-                           <children>
-                              <Button id="login" mnemonicParsing="false" text="¡Vamos!">
-                                 <opaqueInsets>
-                                    <Insets bottom="20.0" />
-                                 </opaqueInsets>
-                              </Button>
-                           </children>
-                        </VBox>
+                        </Button>
                      </children>
-                  </FlowPane>
+                  </VBox>
                </children>
-            </HBox>
+            </VBox>
+            <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
+               <children>
+                  <HBox alignment="TOP_CENTER">
+                     <children>
+                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@assets/zk.png" />
+                           </image>
+                        </ImageView>
+                     </children>
+                  </HBox>
+                  <HBox prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <ImageView fitHeight="76.0" fitWidth="157.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@assets/kafka.png" />
+                           </image>
+                        </ImageView>
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
          </children>
       </VBox>
    </children>
