--- a/code/java/worker/src/main/resources/login.fxml
+++ b/code/java/worker/src/main/resources/login.fxml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.*?>
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-
+<?import javafx.scene.text.Text?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="450.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8"
-            fx:controller="upm.lssp.ui.ActionController">
+            fx:controller="upm.lssp.ui.UserUIController">
    <children>
       <VBox>
          <children>
@@ -35,7 +32,8 @@
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome to the best chat ever, even better than Telegram" wrappingWidth="365.88323974609375" />
                    <VBox alignment="CENTER" prefHeight="100.0" prefWidth="400.0">
                      <children>
-                        <TextField fx:id="username" maxWidth="-Infinity" prefWidth="190.0" text="Username">
+                        <TextField fx:id="username" maxWidth="-Infinity" prefWidth="190.0" text="Username"
+                                   onAction="#login">
                            <opaqueInsets>
                               <Insets />
                            </opaqueInsets>
