--- a/code/java/worker/src/main/resources/chat.fxml
+++ b/code/java/worker/src/main/resources/chat.fxml
@@ -27,12 +27,12 @@
                     <children>
                         <ScrollPane layoutX="-5.0" layoutY="-2.0" prefHeight="581.0" prefWidth="618.0">
                             <content>
-                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0"/>
+                                <ListView fx:id="topicView" prefHeight="579.0" prefWidth="616.0"/>
                             </content>
                         </ScrollPane>
                         <VBox alignment="CENTER" layoutX="-5.0" layoutY="581.0" prefHeight="38.0" prefWidth="616.0">
                             <children>
-                                <TextField maxWidth="550.0" prefHeight="34.0" prefWidth="550.0"/>
+                                <TextField fx:id="textBox" maxWidth="550.0" prefHeight="34.0" prefWidth="550.0"/>
                             </children>
                         </VBox>
                     </children>
