--- a/code/java/worker/src/main/resources/chat.fxml
+++ b/code/java/worker/src/main/resources/chat.fxml
@@ -13,12 +13,12 @@
     <children>
         <SplitPane dividerPositions="0.29445727482678985" layoutY="53.0" prefHeight="626.0" prefWidth="868.0">
             <items>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="632.0" prefWidth="248.0">
+                <AnchorPane focusTraversable="true" minHeight="0.0" minWidth="0.0" prefHeight="632.0" prefWidth="248.0">
                     <children>
                         <ScrollPane layoutY="-2.0" prefHeight="624.0" prefWidth="251.0" AnchorPane.bottomAnchor="0.0"
                                     AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                             <content>
-                                <ListView fx:id="userList" prefHeight="606.0" prefWidth="249.0"/>
+                                <ListView fx:id="userList" prefHeight="622.0" prefWidth="249.0"/>
                             </content>
                         </ScrollPane>
                     </children>
@@ -27,7 +27,8 @@
                     <children>
                         <ScrollPane layoutX="-5.0" layoutY="-2.0" prefHeight="581.0" prefWidth="618.0">
                             <content>
-                                <ListView fx:id="topicView" prefHeight="579.0" prefWidth="616.0"/>
+                                <ListView fx:id="topicView" prefHeight="579.0" prefWidth="616.0"
+                                          stylesheets="@assets/topicView.css"/>
                             </content>
                         </ScrollPane>
                         <VBox alignment="CENTER" layoutX="-5.0" layoutY="581.0" prefHeight="38.0" prefWidth="616.0">
