--- a/code/java/worker/src/main/resources/chat.fxml
+++ b/code/java/worker/src/main/resources/chat.fxml
@@ -6,8 +6,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.Circle?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.text.*?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="677.0" prefWidth="868.0" xmlns="http://javafx.com/javafx/8"
             fx:controller="upm.lssp.ui.ChatUIController">
     <children>
@@ -63,7 +62,7 @@
         </HBox>
         <HBox alignment="CENTER_LEFT" layoutX="251.0" prefHeight="52.0" prefWidth="618.0">
             <children>
-                <HBox alignment="CENTER_LEFT" prefHeight="52.0" prefWidth="463.0">
+                <HBox alignment="CENTER_LEFT" prefHeight="52.0" prefWidth="399.0">
                     <children>
                         <Text fx:id="topicUsername" strokeType="OUTSIDE" strokeWidth="0.0" text="Topic Username">
                             <font>
@@ -78,13 +77,38 @@
                         <Insets left="10.0"/>
                     </HBox.margin>
                 </HBox>
-                <Button fx:id="statusButton" mnemonicParsing="false" onAction="#changeStatus" text="Go Offline">
-
-                    <HBox.margin>
-                        <Insets right="10.0"/>
-                    </HBox.margin>
-                </Button>
-                <Button mnemonicParsing="false" onAction="#quit" text="Quit"/>
+                <VBox prefHeight="52.0" prefWidth="208.0">
+                    <children>
+                        <HBox alignment="CENTER" prefHeight="23.0" prefWidth="251.0">
+                            <children>
+                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Hello, ">
+                                    <font>
+                                        <Font name="Avenir Light Oblique" size="14.0"/>
+                                    </font>
+                                </Text>
+                                <Text fx:id="myUsername" strokeType="OUTSIDE" strokeWidth="0.0" text="My Username">
+                                    <font>
+                                        <Font name="Avenir Light Oblique" size="14.0"/>
+                                    </font>
+                                </Text>
+                            </children>
+                            <VBox.margin>
+                                <Insets bottom="1.0" top="2.0"/>
+                            </VBox.margin>
+                        </HBox>
+                        <HBox alignment="TOP_CENTER" prefHeight="100.0" prefWidth="200.0">
+                            <children>
+                                <Button fx:id="statusButton" mnemonicParsing="false" onAction="#changeStatus"
+                                        text="Go Offline">
+                                    <HBox.margin>
+                                        <Insets right="10.0"/>
+                                    </HBox.margin>
+                                </Button>
+                                <Button mnemonicParsing="false" onAction="#quit" text="Quit"/>
+                            </children>
+                        </HBox>
+                    </children>
+                </VBox>
             </children>
             <opaqueInsets>
                 <Insets/>
