--- a/code/manager/manager-interface/src/app/home/home.component.html
+++ b/code/manager/manager-interface/src/app/home/home.component.html
@@ -1,3 +1,23 @@
-<p>
-  home works!
-</p>
+<div class="container"
+  fxLayout="row"
+  fxLayoutGap="30px">
+  <div fxFlex id="info">
+      <img src="/assets/logo.png" alt="Logo" id="logo" >      
+
+      <h2>Welcome to the Management Portal</h2>
+
+        <div fxFlex fxFlex.gt-sm="50%">
+          <p>Welcome on the administration panel of WhatsBaaP! When the manager API is set-up in manual mode, this interface can be used to approve registers or quits of users. Additionally, this interface provides an administrator of the system a simple interface to view registered and online users of the system.</p>
+          <p>Click the buttons in the header to go to the specific tasks!</p>
+        </div>
+
+    </div>
+
+    <div fxFlex id="powered">
+      <h3>WhatsBaaP is powered by:</h3>
+      <img src="/assets/kafka.png" alt="Logo">
+
+      <img src="/assets/zk.png" alt="Logo">
+    </div>
+
+</div>
